--- a/10-Spatial Analysis/citibike.ipynb
+++ b/10-Spatial Analysis/citibike.ipynb
@@ -12,8 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +132,7 @@
        "4  (POLYGON ((1012821.805786133 229228.2645874023...  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,8 +151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# get the bike data and convert it to a ditcionary\n",
@@ -161,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,12 +213,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td></td>\n",
-       "      <td>3</td>\n",
-       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38</td>\n",
        "      <td></td>\n",
        "      <td>72</td>\n",
        "      <td></td>\n",
-       "      <td>2018-02-17 09:51:05 PM</td>\n",
+       "      <td>2018-02-20 01:42:48 PM</td>\n",
        "      <td>40.767272</td>\n",
        "      <td></td>\n",
        "      <td>-73.993929</td>\n",
@@ -230,12 +234,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td></td>\n",
-       "      <td>16</td>\n",
-       "      <td>16</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
        "      <td></td>\n",
        "      <td>79</td>\n",
        "      <td></td>\n",
-       "      <td>2018-02-17 06:58:49 PM</td>\n",
+       "      <td>2018-02-20 01:43:55 PM</td>\n",
        "      <td>40.719116</td>\n",
        "      <td></td>\n",
        "      <td>-74.006667</td>\n",
@@ -251,12 +255,12 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td></td>\n",
-       "      <td>19</td>\n",
-       "      <td>8</td>\n",
+       "      <td>18</td>\n",
+       "      <td>9</td>\n",
        "      <td></td>\n",
        "      <td>82</td>\n",
        "      <td></td>\n",
-       "      <td>2018-02-17 09:49:32 PM</td>\n",
+       "      <td>2018-02-20 01:44:14 PM</td>\n",
        "      <td>40.711174</td>\n",
        "      <td></td>\n",
        "      <td>-74.000165</td>\n",
@@ -272,12 +276,12 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td></td>\n",
-       "      <td>25</td>\n",
-       "      <td>35</td>\n",
+       "      <td>20</td>\n",
+       "      <td>39</td>\n",
        "      <td></td>\n",
        "      <td>83</td>\n",
        "      <td></td>\n",
-       "      <td>2018-02-17 09:50:21 PM</td>\n",
+       "      <td>2018-02-20 01:44:10 PM</td>\n",
        "      <td>40.683826</td>\n",
        "      <td></td>\n",
        "      <td>-73.976323</td>\n",
@@ -293,12 +297,12 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td></td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
        "      <td></td>\n",
        "      <td>119</td>\n",
        "      <td></td>\n",
-       "      <td>2018-02-17 09:50:11 PM</td>\n",
+       "      <td>2018-02-20 01:41:56 PM</td>\n",
        "      <td>40.696089</td>\n",
        "      <td></td>\n",
        "      <td>-73.978034</td>\n",
@@ -317,18 +321,18 @@
       ],
       "text/plain": [
        "  altitude  availableBikes  availableDocks city   id landMark  \\\n",
-       "0                        3              36        72            \n",
-       "1                       16              16        79            \n",
-       "2                       19               8        82            \n",
-       "3                       25              35        83            \n",
-       "4                       10               8       119            \n",
+       "0                        1              38        72            \n",
+       "1                       33               0        79            \n",
+       "2                       18               9        82            \n",
+       "3                       20              39        83            \n",
+       "4                       12               7       119            \n",
        "\n",
        "    lastCommunicationTime   latitude location  longitude postalCode  \\\n",
-       "0  2018-02-17 09:51:05 PM  40.767272          -73.993929              \n",
-       "1  2018-02-17 06:58:49 PM  40.719116          -74.006667              \n",
-       "2  2018-02-17 09:49:32 PM  40.711174          -74.000165              \n",
-       "3  2018-02-17 09:50:21 PM  40.683826          -73.976323              \n",
-       "4  2018-02-17 09:50:11 PM  40.696089          -73.978034              \n",
+       "0  2018-02-20 01:42:48 PM  40.767272          -73.993929              \n",
+       "1  2018-02-20 01:43:55 PM  40.719116          -74.006667              \n",
+       "2  2018-02-20 01:44:14 PM  40.711174          -74.000165              \n",
+       "3  2018-02-20 01:44:10 PM  40.683826          -73.976323              \n",
+       "4  2018-02-20 01:41:56 PM  40.696089          -73.978034              \n",
        "\n",
        "                      stAddress1 stAddress2                    stationName  \\\n",
        "0               W 52 St & 11 Ave                          W 52 St & 11 Ave   \n",
@@ -345,7 +349,7 @@
        "4          1  In Service        False          19  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +371,7 @@
        "813"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +392,7 @@
        "array([-74.0969366 ,  40.65539977, -73.9077436 ,  40.81439444])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -417,7 +421,7 @@
        "         235986.42166716])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -452,16 +456,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2410"
+       "2660"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -536,8 +540,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#write function to sum available bikes in boro given input of boro geometry\n",
@@ -553,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -561,9 +567,9 @@
      "output_type": "stream",
      "text": [
       "0 available bikes in Staten Island\n",
-      "2160 available bikes in Brooklyn\n",
-      "458 available bikes in Queens\n",
-      "4729 available bikes in Manhattan\n",
+      "1958 available bikes in Brooklyn\n",
+      "371 available bikes in Queens\n",
+      "4751 available bikes in Manhattan\n",
       "0 available bikes in Bronx\n"
      ]
     }
